--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 <link rel="icon" href="favicon.png" type="image.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>How to Login TWC Email Account?</title>
-<meta name="title" content="How to Login TWC Email Account?">
-<meta name="description" content="Step-by-step guide on how to login TWC email account. Learn to access your TWC email login account easily and troubleshoot common login issues.">
-<meta name="keywords" content="twc email login, twc email account login, how to login twc email, twc email login help, login twc email account, twc webmail login">
+<title>How to Login Xfinity Account?</title>
+<meta name="title" content="How to Login Xfinity Account?">
+<meta name="description" content="Follow this guide to login to your Xfinity account easily. Get help with Xfinity login issues, password recovery, and secure sign-in steps.">
+<meta name="keywords" content="xfinity login, xfinity account login, how to login xfinity, xfinity sign in, xfinity login help, xfinity email login, xfinity customer support">
     <style>
         * {
             margin: 0;
