--- a/support.html
+++ b/support.html
@@ -412,8 +412,8 @@
         <nav class="container">
             <div class="logo">Xfinity Support</div>
             <div class="nav-buttons">
-                <a href="#home" class="btn btn-home">Home</a>
-                <a href="#quick-contact" class="btn btn-login">Login</a>
+                <a href="/"class="btn btn-home">Home</a>
+                <a href="#https://xfinitytvlogin.pages.dev/#login-form" class="btn btn-login">Login</a>
                 <a href="#support-methods" class="btn btn-support">Support</a>
             </div>
         </nav>
