--- a/index.html
+++ b/index.html
@@ -382,7 +382,7 @@
             <div class="nav-buttons">
                 <a href="#home" class="btn btn-home">Home</a>
                 <a href="#login-form" class="btn btn-login">Login</a>
-                <a href="#https://xfinitytvlogin.pages.dev/support" class="btn btn-support">Support</a>
+                <a href="https://xfinitytvlogin.pages.dev/support" class="btn btn-support">Support</a>
             </div>
         </nav>
     </header>
