--- a/index.html
+++ b/index.html
@@ -381,7 +381,7 @@
             <div class="logo">Xfinity Login Guide</div>
             <div class="nav-buttons">
                 <a href="#home" class="btn btn-home">Home</a>
-                <a href="https://xfinitytvlogin.pages.dev/login-form" class="btn btn-login">Login</a>
+                <a href="https://xfinitytvlogin.pages.dev/#login-form" class="btn btn-login">Login</a>
                 <a href="https://xfinitytvlogin.pages.dev/support" class="btn btn-support">Support</a>
             </div>
         </nav>
