--- a/support.html
+++ b/support.html
@@ -413,7 +413,7 @@
             <div class="logo">Xfinity Support</div>
             <div class="nav-buttons">
                 <a href="/"class="btn btn-home">Home</a>
-                <a href="#https://xfinitytvlogin.pages.dev/#login-form" class="btn btn-login">Login</a>
+                <a href="https://xfinitytvlogin.pages.dev/#login-form" class="btn btn-login">Login</a>
                 <a href="#support-methods" class="btn btn-support">Support</a>
             </div>
         </nav>
