--- a/index.html
+++ b/index.html
@@ -378,7 +378,12 @@
 <body>
     <header>
         <nav class="container">
-            <div class="logo">Xfinity Login Guide</div>
+            <div class="logo" style="display: flex; align-items: center; gap: 10px;">
+  <img src="https://static.semrush.com/power-pages/media/favicons/xfinity-com-favicon-25ce32d4.png" 
+       alt="Xfinity Logo" 
+       style="height: 60px; width: auto;">
+  <span style="font-size: 18px; font-weight: bold; color: #fff;">xfinity</span>
+</div>
             <div class="nav-buttons">
                 <a href="#home" class="btn btn-home">Home</a>
                 <a href="#login-form" class="btn btn-login">Login</a>
